use_undefined_identifier/c3/King
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/King/src/neval.c:709:10: error: use of undeclared identifier 'dword_66859C'
v4 = ( ( dword_66859C[sq] + 1) & 0xFFFFFFFE ^ 8 | c ^ ( dword_66859C[sq] + 1) & 1) == 0; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/King/src/neval.c:709:57: error: use of undeclared identifier 'dword_66859C'
v4 = ( ( dword_66859C[sq] + 1) & 0xFFFFFFFE ^ 8 | c ^ ( dword_66859C[sq] + 1) & 1) == 0; 
                                                        ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/King/src/obj/neval.o] Error 1
